--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-navigation/native": "^6.0.6",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
+    "firebase": "^9.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
